# solarium

./: .gitignore  CODE_OF_CONDUCT.md  README.md
.github/workflows/: client.yml  codeql-analysis.yml  program.yml
cli/: README.md  package.json  tsconfig.json
cli/src/commands/: add-key.ts  chat.ts  create.ts  id.ts  invite.ts  post.ts  read.ts  watch.ts
cli/src/lib/: config.ts  util.ts
cli/src/service/: addKey.ts  chat.ts  create.ts  id.ts  invite.ts  post.ts  read.ts
cli/test/: alice-2.json  alice-2.out  alice.json  alice.out  bob.json  bob.out  tsconfig.json
cli/test/commands/: chat.test.ts  commands.test.ts  create.test.ts  get.test.ts  id.test.ts  invite.test.ts  post.test.ts
client/: .eslintrc.js  package.json  tsconfig.json
client/scripts/: notifySolana.ts
client/src/: index.ts
client/src/api/: addKey.ts  addToChannel.ts  close.ts  create.ts  get.ts  post.ts  read.ts
client/src/lib/: Channel.ts  Inbox.ts  Notifications.ts  User.ts  UserDetails.ts  cache.ts  constants.ts  util.ts
client/src/service/: addToChannel.ts  close.ts  create.ts  get.ts  notifications.ts  post.ts  updateCEKAccount.ts  userDetails.ts
client/test/: e2e.test.ts  setup.ts
client/test/e2e/: e2e.test.ts
docs/: demo-cli.m4v  demo-kate.m4v  demo-quick.m4v
program/: .gitignore  Cargo.toml  program-id.md
program/src/: borsh.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: functional.rs  solarium_context.rs
ui/: .gitignore  package.json  tailwind.config.js
ui/public/: index.html  manifest.json
ui/src/: App.tsx  index.tsx
(+88 files in other folders)
