[package]
name = "solarium"
version = "0.1.0"
description = "Inbox and Messaging Program"
authors = ["Daniel Kelleher <danielbkelleher@gmail.com>"]
repository = "https://github.com/dankelleher/solarium"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
sol-did = {version = "0.2.0", features = [ "no-entrypoint" ] }
solana-program = "1.7.10"
thiserror = "1.0.26"

[dev-dependencies]
solana-program-test = "1.7.10"
solana-sdk = "1.7.10"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
